# Portal-Vesper

./: .env.example  .gitignore  AUDITORIA_GERAL_PORTAL_VESPER_ATUAL.md  IMPLEMENTACAO_KANBAN_ENGINE_UI.md  IMPLEMENTACAO_KANBAN_ENGINE_UI_POLIMENTO.md  IMPLEMENTACAO_KANBAN_PADRAO_GERAL_TV.md  IMPLEMENTACAO_KANBAN_PRODUCAO_UI.md  N8N_AI_WORKFLOWS_TEST_MATRIX.md  N8N_AI_WORKFLOWS_TOOLS_USED.md  N8N_PORTAL_API_GAP_ANALYSIS.md  PLANO_IMPLEMENTACAO_KANBAN_CONFIGURAVEL.md  README.md  TESTE_MANUAL_KANBAN_CONFIGURAVEL_FASE2.md  TESTE_MANUAL_KANBAN_GERAL_HUB.md  TESTE_MANUAL_KANBAN_PADRAO_GERAL.md  TESTE_MANUAL_KANBAN_PRODUCAO_UI.md  package-lock.json  package.json  playwright.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_foundation.py  0002_kanban_engine.py  0003_kanban_producao_simple.py  7537de7834ab_add_automation_core_phase_1.py
backend/app/: main.py  models.py  worker.py
backend/app/core/: audit.py  config.py  database.py  permissions.py  redis.py  security.py  storage.py  websocket.py
backend/app/modules/admin/: router.py
backend/app/modules/auth/: router.py
backend/app/modules/automation/: models.py  router.py  schemas.py  security.py  service.py
backend/app/modules/files/: router.py
backend/app/modules/kanban/: configuration.py  events.py  hub_config.py  models.py  permissions.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/notifications/: router.py  (+1 more)
backend/app/schemas/: auth.py
backend/seeds/: initial_seed.py
backend/tests/: conftest.py  test_files.py  test_health.py  test_kanban_engine.py  test_kanban_producao.py  test_login.py  test_modules.py  test_notifications.py  test_permissions.py  test_websocket.py
backend/tests/api/: test_automation.py
(+214 files in other folders)
