[package]
name = "portal-vesper"
version = "0.1.0"
description = "Portal Vesper desktop shell"
authors = ["Vesper"]
edition = "2021"

[lib]
name = "portal_vesper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
